# joltc

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: joltc.h
include/joltc/: constants.h  enums.h  joltc.h  types.h
include/joltc/Geometry/: AABox.h
include/joltc/Math/: Mat44.h  Quat.h  RMat44.h  RVec3.h  Transform.h  Vector3.h
include/joltc/Physics/Body/: Body.h  BodyCreationSettings.h  BodyFilter.h  BodyID.h  BodyInterface.h  MassProperties.h  MotionProperties.h
include/joltc/Physics/Collision/: CastResult.h  CollidePointResult.h  CollideShape.h  CollisionDispatch.h  CollisionGroup.h  GroupFilter.h  NarrowPhaseQuery.h  ObjectLayer.h  PhysicsMaterial.h  RayCast.h  ShapeCast.h  ShapeFilter.h
include/joltc/Physics/Collision/BroadPhase/: BroadPhaseLayer.h  BroadPhaseQuery.h
include/joltc/Physics/Collision/Shape/: Shape.h  SubShapeID.h  SubShapeIDPair.h
include/joltc/Physics/SoftBody/: SoftBodyCreationSettings.h
samples/01_HelloWorld/: main.cpp
src/: joltc.cpp  joltc_assert.cpp
src/Math/: Mat44.cpp  Quat.cpp  RMat44.cpp  RVec3.cpp  Vector3.cpp
src/Physics/Body/: Body.cpp  BodyCreationSettings.cpp  BodyFilter.cpp  BodyInterface.cpp  MassProperties.cpp  MotionProperties.cpp
src/Physics/Collision/: CollideShape.cpp  CollisionDispatch.cpp  CollisionGroup.cpp  GroupFilter.cpp  NarrowPhaseQuery.cpp  ObjectLayer.cpp  PhysicsMaterial.cpp  ShapeCast.cpp  ShapeFilter.cpp
src/Physics/Collision/BroadPhase/: BroadPhaseLayer.cpp  BroadPhaseQuery.cpp
src/Physics/Collision/Shape/: Shape.cpp
src/Physics/SoftBody/: SoftBodyCreationSettings.cpp
src/include/Geometry/: AABox.hpp
src/include/Math/: Mat44.hpp  Quat.hpp  RMat44.hpp  RVec3.hpp  Transform.hpp  Vector3.hpp
src/include/Physics/Body/: Body.hpp  BodyCreationSettings.hpp  BodyFilter.hpp  BodyInterface.hpp  MassProperties.hpp  MotionProperties.hpp
src/include/Physics/Collision/: CollideShape.hpp  CollisionGroup.hpp  GroupFilter.hpp  NarrowPhaseQuery.hpp  ObjectLayer.hpp  PhysicsMaterial.hpp  RayCast.hpp  ShapeCast.hpp  ShapeFilter.hpp
src/include/Physics/Collision/BroadPhase/: BroadPhaseLayer.hpp  BroadPhaseQuery.hpp
src/include/Physics/Collision/Shape/: Shape.hpp
src/include/Physics/SoftBody/: SoftBodyCreationSettings.hpp
